<resources>
    <string name="app_name">Music Galaxy</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favorites_btn">Favorites</string>
    <string name="playlist_btn">Playlist</string>
    <string name="total_songs">Total Songs:</string>
    <string name="music_galaxy">Music Galaxy</string>
    <string name="songTime">0:00</string>
    <string name="song_name">Song Name</string>
    <string name="backBtn">backBtn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>