<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/favorites_btn"
                    android:text="@string/favorites_btn"
                    android:textColor="@color/black"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/baseline_favorite_24"
                    android:contentDescription="@string/shuffle_btn" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/songPlaylist_btn"
                    android:text="@string/playlist_btn"
                    android:textColor="@color/black"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:drawableTop="@drawable/baseline_playlist_add_24"
                    android:layout_weight="1"
                    android:contentDescription="@string/shuffle_btn" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_songs"
                android:textColor="@color/black"
                android:layout_margin="8dp"
                android:textSize="16sp"
                android:id="@+id/totalSongs_tv" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/songs_recycler_view"
                android:scrollbars="vertical"
                android:scrollbarThumbVertical="@drawable/scroll_bar"/>

        </LinearLayout>
        
        <androidx.fragment.app.FragmentContainerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nowPlayingFragment"
            android:layout_margin="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:name="com.example.musicgalaxy.nowPlayingFragment.NowPlayingSong"
            tools:layout="@layout/fragment_now_playing_song"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>