<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".PlayerActivity">

        <!--    Header layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/backButton"
                android:layout_marginStart="8sp"
                android:textColor="@color/black"
                android:src="@drawable/baseline_arrow_back_ios_24"
                android:background="@android:color/transparent"
                android:contentDescription="@string/backBtn" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/music_galaxy"
                android:gravity="center"
                android:textStyle="bold|italic"
                android:layout_weight="1"
                android:textColor="#E40F57"
                android:textSize="25sp"
                tools:ignore="NestedWeights" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/favouriteSongBtn"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/favorites_btn"
                android:src="@drawable/baseline_favorite_border_24"
                android:background="@android:color/transparent" />

        </LinearLayout>

        <!--    Song Image -->

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:id="@+id/musicImage"
            android:src="@drawable/music"
            app:shapeAppearanceOverlay="@style/cornerRound"
            app:strokeColor="#03A9F4"
            android:scaleType="centerCrop"
            app:strokeWidth="5dp"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/songTitle"
            android:text="@string/song_name"
            android:textSize="22sp"
            android:maxLines="1"
            android:layout_margin="8dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:textStyle="italic|bold"
            android:textColor="@color/black" />

        <!--    Play pause button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/previousSongBtn"
                app:iconSize="46sp"
                android:contentDescription="prev btn"
                android:layout_margin="16dp"
                app:icon="@drawable/baseline_skip_previous_24" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/playPauseBtn"
                android:layout_margin="16dp"
                app:iconSize="46sp"
                android:contentDescription="play btn"
                app:backgroundTint="#F80505"
                app:shapeAppearanceOverlay="@style/cornerRound"
                app:iconTint="@color/white"
                app:icon="@drawable/baseline_play_arrow_24" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/nextSongBtn"
                android:contentDescription="next btn"
                android:layout_margin="16dp"
                app:iconSize="46sp"
                app:icon="@drawable/baseline_skip_next_24" />

        </LinearLayout>

        <!--    Seekbar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/startSeekbarTv"
                android:text="@string/songTime"
                android:textSize="15sp"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:layout_width="0dp"
                android:id="@+id/seekbarTv"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/endSeekbarTv"
                android:text="@string/songTime"
                android:textSize="15sp"
                android:textColor="@color/black" />

        </LinearLayout>

        <!--    Different Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/share_song_btn"
                android:layout_weight="1"
                app:tint="@color/black"
                android:src="@drawable/baseline_share_24"
                android:background="@android:color/transparent"
                android:contentDescription="@string/backBtn"
                tools:ignore="NestedWeights" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/shuffle_song_btn"
                android:layout_weight="1"
                app:tint="@color/black"
                android:src="@drawable/baseline_shuffle_24"
                android:background="@android:color/transparent"
                android:contentDescription="@string/backBtn" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/repeat_song_btn"
                android:layout_weight="1"
                android:src="@drawable/baseline_repeat_24"
                android:background="@android:color/transparent"
                android:contentDescription="@string/backBtn"
                app:tint="@color/black" />
        </LinearLayout>

    </LinearLayout>
</layout>